--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@raycast/utils": "^1.5.2",
     "axios": "^1.3.4",
     "node-fetch": "^3.3.1",
-    "pretty-ms": "^8.0.0"
+    "pretty-ms": "^8.0.0",
+    "toggl-api": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
